[gd_scene load_steps=20 format=2]

[ext_resource path="res://entities/characters/emuwaa/skills/big_destructive_summon_meteor/meteor.png" type="Texture" id=1]
[ext_resource path="res://assets/place_holder/effects (new)/enemy_afterdead_explosion_anim_f1.png" type="Texture" id=2]
[ext_resource path="res://common/particles/rock_explosion/rock_explosion.tres" type="Material" id=3]
[ext_resource path="res://entities/characters/emuwaa/skills/big_destructive_summon_meteor/meteor_impact.png" type="Texture" id=4]
[ext_resource path="res://assets/place_holder/light.png" type="Texture" id=5]
[ext_resource path="res://entities/characters/emuwaa/skills/big_destructive_summon_meteor/meteor_drop.gd" type="Script" id=6]
[ext_resource path="res://objects/projectiles/explosives/explosion_hitbox.gd" type="Script" id=7]
[ext_resource path="res://common/collisions/weapon_hitbox.gd" type="Script" id=8]

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0.010989, 1 )
colors = PoolColorArray( 1, 1, 1, 0.619608, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
resource_local_to_scene = true
trail_divisor = 2
emission_shape = 1
emission_sphere_radius = 40.0
flag_disable_z = true
gravity = Vector3( 0, -400, 0 )
angular_velocity = 720.0
orbit_velocity = -0.3
orbit_velocity_random = 1.0
scale = 1.2
color = Color( 0.960784, 0.654902, 0.137255, 0.552941 )
color_ramp = SubResource( 9 )
hue_variation = 0.42
hue_variation_random = 0.46

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Particles2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3.0122, 2.06168 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ExplosionHitbox/Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Particles2D:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=1]
resource_name = "drop"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 2.2974, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -307.173, 265.675 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Particles2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 2.2974, 1 ),
"update": 0,
"values": [ Vector2( 3.0122, 2.06168 ), Vector2( -304.161, 267.737 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "explode"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ExplosionHitbox/Sprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=13]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 84.0108

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ExplosionHitbox/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplosionHitbox/Sprite/ExplosionParticle:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ExplosionHitbox/Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Particles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Light2D:energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "explode"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ExplosionHitbox/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplosionHitbox/Sprite/ExplosionParticle:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ExplosionHitbox/Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Particles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Light2D:energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="CircleShape2D" id=11]
radius = 84.0236

[sub_resource type="CircleShape2D" id=12]
radius = 42.144

[node name="MeteorDrop" type="Area2D"]
collision_layer = 8
collision_mask = 4
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 3.0122, 2.06168 )
z_index = 2
emitting = false
amount = 300
process_material = SubResource( 10 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "drop"
anims/RESET = SubResource( 2 )
anims/drop = SubResource( 1 )
anims/fade = SubResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -300.687, 260.825 )
shape = SubResource( 3 )
disabled = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -303.963, 267.361 )
texture = ExtResource( 5 )
texture_scale = 0.5
color = Color( 0.92549, 0.619608, 0.258824, 1 )
energy = 0.0

[node name="ExplosionHitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
monitoring = false
script = ExtResource( 7 )
detonator_path = NodePath("..")

[node name="Sprite" type="Sprite" parent="ExplosionHitbox"]
visible = false
position = Vector2( -306.42, 265.853 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
hframes = 10
__meta__ = {
"_edit_group_": true
}

[node name="ExplosionParticle" type="Particles2D" parent="ExplosionHitbox/Sprite"]
emitting = false
amount = 200
lifetime = 2.0
one_shot = true
speed_scale = 3.0
explosiveness = 0.47
process_material = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ExplosionHitbox"]
root_node = NodePath("../..")
anims/RESET = SubResource( 5 )
anims/explode = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionHitbox"]
modulate = Color( 0.25098, 1, 0.541176, 1 )
position = Vector2( -299.344, 260.954 )
shape = SubResource( 11 )
disabled = true

[node name="Audio" type="AudioStreamPlayer2D" parent="ExplosionHitbox"]

[node name="FireHitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireHitbox"]
position = Vector2( -302.212, 261.443 )
shape = SubResource( 12 )
disabled = true

[node name="FireDoT" type="Timer" parent="."]
wait_time = 0.5

[node name="Duration" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="FireDoT" to="." method="_on_FireDoT_timeout"]
[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
